--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "axios": "^1.4.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "typescript": "5.1.5"
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-react": "^7.32.2",
+    "typescript": "*"
   }
 }
