--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@stitches/react": "^1.2.8",
     "axios": "^1.4.0",
-    "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "13.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
